# phishML

./: .gitignore  README.md  extract.py  out.json  pyproject.toml  requirements.txt
data/: sample.eml
src/phishml/: __init__.py  cli.py  features.py  model.py  parser.py
src/phishml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
