[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishml"
version = "0.0.1"
description = "Phishing detection pipeline for raw .eml emails"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4==4.12.3",
  "scikit-learn==1.5.2",
  "numpy==2.1.3",
  "pandas==2.2.3",
  "joblib==1.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]
